--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-This is the Battleship app.
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Battleship App</title>
+</head>
+<body>
+  <div id="board">
+    
+  </div>
+  <script type="text/javascript" src="./assets/js/app.js"></script>
+</body>
+</html>
+
